--- a/2025-langproc-cw-repo/Makefile
+++ b/2025-langproc-cw-repo/Makefile
@@ -12,7 +12,7 @@ CXXFLAGS += -rdynamic # to get more helpful traces when debugging
 CXXFLAGS += --coverage # enable code coverage
 CXXFLAGS += -I include # look for header files in the `include` directory
 
-SOURCES := $(wildcard src/*.cpp) # all .cpp files are to be considered source files
+SOURCES := $(shell find src -type f -name "*.cpp") # all .cpp files are to be considered source files
 DEPENDENCIES := $(patsubst src/%.cpp,build/%.d,$(SOURCES))
 
 OBJECTS := $(patsubst src/%.cpp,build/%.o,$(SOURCES))
